--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage --verbose"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/samahAbujwaied/CAPS-#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "faker": "^5.5.3",
+    "jest": "^27.0.6",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3"
   }
